--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.firebase:firebase-auth:11.0.4'
     implementation 'com.google.firebase:firebase-messaging:11.0.4'
+    implementation 'com.google.firebase:firebase-ads:11.0.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.firebase:firebase-database:11.0.4'
+    compile 'com.google.android.gms:play-services-ads:11.0.4'
     implementation 'com.google.firebase:firebase-storage:11.0.4'
     implementation 'com.firebaseui:firebase-ui-database:2.3.0'
     implementation 'com.google.firebase:firebase-config:11.0.4'
@@ -52,6 +54,7 @@ configurations.all {
         }
     }
 }
+
 
 
 
